# statdyn-analysis

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  CHANGELOG.md  CompDynamics.py  Dockerfile  FileDynamics.py  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  Run_Hoomd.ipynb  StepSize.py  TimeDep.py  TransData.py  Trimer-Dynamics.hoomd  Trimer-TransRot.hoomd  Trimer-equil.hoomd  Trimer-equil.pbs  Trimer-setup.py  TrimerDynamics.hoomd  TrimerDynamics.pbs  TrimerDynamics.py  TrimerDynamics.sh  TrimerEquil.hoomd  TrimerEquil.pbs  TrimerEquil.py  TrimerEquil.sh  TrimerNoRot.pbs  TrimerNoRot.py  TrimerNoRot.sh  TrimerSetup.py  basic.py  compute_motion.py  conda_build_config.yaml  crystals.py  (+13 more)
.chglog/: config.yml
conda_recipe/: conda_build_config.yaml  meta.yaml
figures/: dynamics.R  thermo.R
scripts/: deploy_anaconda.sh  deploy_pypi.sh
simulations/: interface.py  melting.py  run_simulation.py
sphinx/: Makefile
statdyn/: CompDynamics.py  Simulation.py  StepSize.py  TimeDep.py  TransData.py  basic.py  crystals.py  dynamics.py  initialise.py  math_helper.pxd  math_helper.pyx  molecule.py  molecules.py
test/: argparse_test.py  bokeh_test.py  collate_test.py  conftest.py  crystal_test.py  dynamics_test.py  equilibrate_test.py  figures_test.py  frame_test.py  initialise_test.py  integration_test.py  math_helper_test.py  math_util_test.py  molecule_test.py  order_test.py  params_test.py  read_gsd_test.py  read_test.py  relaxation_test.py  sdanalysis_test.py  sdrun_test.py  simulation_test.py  stepsize_test.py  (+7 more)
(+93 files in other folders)
