[bumpversion]
current_version = 0.4.12
commit = True
tag = True
files = src/sdanalysis/version.py meta.yaml

[metadata]
description-file = README.md
license_file = LICENSE

[mypy]
ignore_missing_imports = True

[tool:pytest]
addopts = -v --pylint --cov=sdanalysis --durations=10
testpaths = test

[isort]
multi_line_output=3
include_trailing_comma=True
