[bumpversion]
current_version = 0.5.4
commit = True
tag = True
files = src/sdanalysis/version.py meta.yaml

[metadata]
description-file = README.md
license_file = LICENSE

[mypy]
ignore_missing_imports = True

[tool:pytest]
addopts = -v --pylint --cov=sdanalysis --durations=10
testpaths = test

[isort]
multi_line_output = 3
include_trailing_comma = True
combine_as_imports = True
force_grid_wrap = 0
line_length = 88

