[bumpversion]
current_version = 0.6.9
commit = False
tag = False
files = src/sdanalysis/version.py conda_recipe/meta.yaml

[metadata]
description-file = README.md
license_file = LICENSE

[mypy]
ignore_missing_imports = True

[tool:pytest]
addopts = -v --cov=sdanalysis --durations=10
testpaths = test
log_level = DEBUG

[isort]
multi_line_output = 3
include_trailing_comma = True
combine_as_imports = True
force_grid_wrap = 0
line_length = 88

